[package]
name = "nyow-greeter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.15", features = ["derive"] }
config = "0.14.0"
greetd_ipc = { version = "0.10.3", features = ["sync-codec"] }
gtk = "0.18.1"
log = "0.4.22"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
simplelog = "0.12.2"
tokio = { version = "1.39.2", features = ["full"] }
